RE #75: - Screen header and breadcrumbs will now cutoff with ellipsis - Set table bottom margin to .25rem, also manually added mb-0 to dark and striped example tables - Fixed main nav dropdown border for light nav

--- a/src/components/screen/styles.scss
+++ b/src/components/screen/styles.scss
@@ -206,6 +206,19 @@ $sidenav-width:     300px;
   padding: .5rem 0;
   letter-spacing: .01em;
   text-transform: capitalize;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+
+  & .breadcrumb {
+    flex-wrap: nowrap;
+  }
+
+  & .breadcrumb-item:last-child {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 }
 
 @media (max-width: 767px) {
